fix: migrated ActionBar, ActionRowOverflow, Breadcrumbs, ButtonListOrDropdown, CardHeader, CollapseButton, DocumentBox, DocumentList, SelectableList and Dropzone

--- a/packages/react-front-kit/src/Components/ActionBar/ActionBar.module.css
+++ b/packages/react-front-kit/src/Components/ActionBar/ActionBar.module.css
@@ -2,10 +2,9 @@
   align-items: center;
   background-color: var(--mantine-primary-color-9);
   border-radius: 4px;
-  /*color: theme.white;*/
+  color: var(--mantine-color-white);
   display: inline-flex;
   justify-content: space-between;
   padding: 16px 24px;
-  /*ref: getStylesRef(actionBar);*/
   width: 100%;
 }
